Added authors. But really bad code done.

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -8,6 +8,10 @@
     <%= f.text_field :title %>
   </p>
   <p>
+    <%= f.label :authors %><br />
+    <%= f.text_field :authors %>
+  </p>
+  <p>
     <%= f.label :publisher %><br />
     <%= f.text_field :publisher %>
   </p>
