--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,9 @@
 <h1>Listing books</h1>
 
-<table>
+<table border=1>
   <tr>
     <th>Title</th>
+    <th>Authors</th>
     <th>Publisher</th>
     <th>Year</th>
     <th>Isbn</th>
@@ -16,6 +17,7 @@
 <% for book in @books %>
   <tr>
     <td><%=h book.title %></td>
+    <td><%=h book.authors %></td>
     <td><%=h book.publisher %></td>
     <td><%=h book.year %></td>
     <td><%=h book.isbn %></td>
