--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -3,9 +3,13 @@
 <% form_for(@book) do |f| %>
   <%= f.error_messages %>
 
-  <p>
+ <p>
     <%= f.label :title %><br />
     <%= f.text_field :title %>
+  </p> 
+  <p>
+    <%= f.label :authors %><br />
+    <%= f.text_field :authors %>
   </p>
   <p>
     <%= f.label :publisher %><br />
