--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,6 +4,11 @@
 </p>
 
 <p>
+  <b>Authors:</b>
+  <%=h @book.authors.map {|x| x.author} .join ", " %>
+</p>
+
+<p>
   <b>Publisher:</b>
   <%=h @book.publisher %>
 </p>
