improved and corrected

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,7 @@
 
 <p>
   <b>Authors:</b>
-  <%=h @book.authors.map {|x| x.author} .join ", " %>
+  <%=h @book.authors.map {|x| x.name} .join ", " %>
 </p>
 
 <p>
