--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -8,8 +8,8 @@
     <%= f.text_field :title %>
   </p> 
   <p>
-    <%= f.label :names %><br />
-    <%= f.text_field :names %>
+    <%= f.label :authors %><br />
+    <%= f.text_field :authors %>
   </p>
   <p>
     <%= f.label :publisher %><br />
