Books connection with Authors became more pretty

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -9,7 +9,7 @@
   </p> 
   <p>
     <%= f.label :authors %><br />
-    <%= f.text_field :authors %>
+    <%= f.text_field :str_authors %>
   </p>
   <p>
     <%= f.label :publisher %><br />
