--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,123 @@
 		<meta name="resource-type" content="document" />
 		<meta name="MSSmartTagsPreventParsing" content="true" />
 		<%= stylesheet_link_tag 'base' %>
+		<%= stylesheet_link_tag 'default' %>
 		<%= javascript_include_tag :defaults %>
 	</head>
 	<body>
-		<div id="container">
-			<div id="header">
+    <!-- start header -->
+    <div id="header">
+      <div id="logo">
+        <h1><a href="/">Bookez </a></h1>
+        <p>&nbsp;&nbsp;by&nbsp; ++OPK</p>
+      </div>
+      <div id="menu">
+        <ul>
+          <li class="current_page_item"><a href="#">homepage</a></li>
+          <li><a href="/books">books</a></li>
+          <li><a href="/search">search</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- end header -->
+    <!-- start page -->
+    <div id="page">
+      <!-- start content -->
+      <div id="content">
+        <!-- start latest-post -->
+        <div id="latest-post" class="post">
+          <h1 class="title"><%= @page_title || "Welcome to Bookez!"%></h1>
+          <p class="meta">
+            Made with Ruby on Rails
+          </p>
+          <%= flash_messages %>
+          <%= yield :layout %>
+        </div>
+        <!-- end latest-post -->
+        <!-- start recent-posts -->
+        <div id="recent-posts">
+          <% unless logged_in? %>
+            <div><h1>Login</h1></div>
+            <%= render :partial => 'layouts/login_form' %>
+          <% else %>
+            <div><h1>Hi, you are logged in</h1></div>
+          <% end %>
+        </div>
+        <!-- end recent-posts -->
+      </div>
+      <!-- end content -->
+      <!-- start sidebar -->
+      <div id="sidebar">
+        <% if false %>
+        <ul>
+          <li>
+            <h2>Lorem Ipsum</h2>
+            <ul>
+              <li><a href="#">Fusce dui neque fringilla</a></li>
+              <li><a href="#">Eget tempor eget nonummy</a></li>
+              <li><a href="#">Magna lacus bibendum mauris</a></li>
+              <li><a href="#">Nec metus sed donec</a></li>
+              <li><a href="#">Magna lacus bibendum mauris</a></li>
+              <li><a href="#">Velit semper nisi molestie</a></li>
+              <li><a href="#">Eget tempor eget nonummy</a></li>
+            </ul>
+          </li>
+          <li>
+            <h2>Lorem Ipsum</h2>
+            <ul>
+              <li><a href="#">Fusce dui neque fringilla</a></li>
+              <li><a href="#">Eget tempor eget nonummy</a></li>
+              <li><a href="#">Magna lacus bibendum mauris</a></li>
+              <li><a href="#">Nec metus sed donec</a></li>
+              <li><a href="#">Magna lacus bibendum mauris</a></li>
+              <li><a href="#">Velit semper nisi molestie</a></li>
+              <li><a href="#">Eget tempor eget nonummy</a></li>
+            </ul>
+          </li>
+          <li>
+            <h2>Volutpat Dolore</h2>
+            <ul>
+              <li><a href="#">Eget tempor eget nonummy</a></li>
+              <li><a href="#">Magna lacus bibendum mauris</a></li>
+              <li><a href="#">Magna lacus bibendum mauris</a></li>
+              <li><a href="#">Velit semper nisi molestie</a></li>
+              <li><a href="#">Nec metus sed donec</a></li>
+              <li><a href="#">Magna lacus bibendum mauris</a></li>
+              <li><a href="#">Fusce dui neque fringilla</a></li>
+            </ul>
+          </li>
+          <li>
+            <h2>Magna Bibendum</h2>
+            <ul>
+              <li><a href="#">Nec metus sed donec</a></li>
+              <li><a href="#">Magna lacus bibendum mauris</a></li>
+              <li><a href="#">Velit semper nisi molestie</a></li>
+              <li><a href="#">Eget tempor eget nonummy</a></li>
+              <li><a href="#">Nec metus sed donec</a></li>
+              <li><a href="#">Magna lacus bibendum mauris</a></li>
+              <li><a href="#">Velit semper nisi molestie</a></li>
+            </ul>
+          </li>
+        </ul>
+        <% end %>
+        <div style="clear: both;">&nbsp;</div>
+      </div>
+      <!-- end sidebar -->
+    </div>
+    <!-- end page -->
+    <div id="footer-bg">
+      <div id="footer">
+        <p id="legal">&copy;2008 ++OPK. All Rights Reserved.  Designed by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a></p>
+        <p id="links"><a href="#">Privacy</a>&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; <a href="#">Terms</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="http://validator.w3.org/check/referer" title="This page validates as XHTML 1.0 Transitional"><abbr title="eXtensible HyperText Markup Language">XHTML</abbr></a> &nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/check/referer" title="This page validates as CSS"><abbr title="Cascading Style Sheets">CSS</abbr></a></p>
+      </div>
+    </div>
+
+
+
+	</body>
+</html>
+
+<% if false %>
 				<ul>
 					<% if logged_in? %>
 					<li><%= link_to 'Logout', logout_path %></li>
@@ -23,11 +135,4 @@
 					<li><%= link_to 'Signup', signup_path %></li>
 					<% end %>
 				</ul>
-			</div>
-			<div id="content">
-				<%= flash_messages %>
-				<%= yield :layout %>
-			</div>
-		</div>
-	</body>
-</html>
+<% end %>
