Introduce HomepageController and put it to the root

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       </div>
       <div id="menu">
         <ul>
-          <li class="current_page_item"><a href="#">homepage</a></li>
+          <li class="current_page_item"><a href="/">homepage</a></li>
           <li><a href="/books">books</a></li>
           <li><a href="/search">search</a></li>
         </ul>
