--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,4 +1,4 @@
 <li>
-  <span class="authors"><%= format_authors(book.authors) %></span>. 
-  <span class="booktitle"><%= link_to_book(book) %></span>
+  <span class="authors"><i><%= format_authors(book.authors) %></i></span>. 
+  <span class="booktitle"><b><%= link_to_book(book) %></b></span>
 </li>
