--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,48 +1,8 @@
 <% @page_title = 'Editing book' %>
 
 <% form_for(@book) do |f| %>
-  <%= f.error_messages %>
+  <%= render :partial => 'fields', :locals => { :f => f }  %>
 
-  <p>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :authors %><br />
-    <%= f.text_field :str_authors %>
-  </p>
-  <p>
-    <%= f.label :publisher %><br />
-    <%= f.text_field :publisher %>
-  </p>
-  <p>
-    <%= f.label :year %><br />
-    <%= f.text_field :year %>
-  </p>
-  <p>
-    <%= f.label :isbn %><br />
-    <%= f.text_field :isbn %>
-  </p>
-  <p>
-    <%= f.label :pages %><br />
-    <%= f.text_field :pages %>
-  </p>
-  <p>
-    <%= f.label :orig_title %><br />
-    <%= f.text_field :orig_title %>
-  </p>
-  <p>
-    <%= f.label :annotation %><br />
-    <%= f.text_area :annotation %>
-  </p>
-  <p>
-    <%= f.label :circulation %><br />
-    <%= f.text_field :circulation %>
-  </p>
-  <p>
-    <%= f.label :series %><br />
-    <%= f.text_field :series %>
-  </p>
   <p>
     <%= f.submit "Update" %>
   </p>
