--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
 		<meta name="MSSmartTagsPreventParsing" content="true" />
 		<%= stylesheet_link_tag 'base' %>
 		<%= stylesheet_link_tag 'default' %>
-		<%= javascript_include_tag :defaults %>
+		<%= javascript_include_tag 'jquery' %>
+		<%= javascript_include_tag 'ui.core.js' %>
+		<%= javascript_include_tag 'ui.autocomplete.js' %>
+		<%= javascript_include_tag @include_js if @include_js %>
 	</head>
 	<body>
     <!-- start header -->
