--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -79,6 +79,11 @@
 </p>
 <% end %>
 
-
-<%= link_to 'Edit', edit_book_path(@book) %> |
+<% if current_user and not current_user.books.include?( @book ) %>
+  <%= link_to 'Add to my books', new_book_ownership_path(@book) %>
+<% else %>
+  <%= link_to 'Remove from my books',
+        book_ownership_path(@book),
+        :method => :delete %>
+<% end %>
 <%= link_to 'Back', books_path %>
