--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
       <div id="menu">
         <ul>
           <li class="current_page_item"><a href="/">homepage</a></li>
+          <li><a href="/users">users</a></li>
           <li><a href="/books">books</a></li>
           <li><a href="/search">search</a></li>
         </ul>
