--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -418,6 +418,11 @@ ol.booklist {
   padding-left: 0;
 }
 
+ol.userlist {
+  list-style: none;
+  padding-left: 0;
+}
+
 /*autocomplete*/
 .ui-autocomplete-results {
         /*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
