Annotation area was too big, it annoyed

--- a/app/views/books/_fields.html.erb
+++ b/app/views/books/_fields.html.erb
@@ -30,7 +30,7 @@
   </p>
   <p>
     <%= f.label :annotation %><br />
-    <%= f.text_area :annotation %>
+    <%= f.text_area :annotation, :rows => 3 %>
   </p>
   <p>
     <%= f.label :circulation %><br />
