Rating added to views, now you can rate, overrate books!

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,6 +9,8 @@
 <% end %>
 </i></p>
 
+<%= render :partial => "books/rating", :locals => { :book => @book } %>
+
 <p>
   <b>Title:</b>
   <%=h @book.title %>
