--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<% @page_title = "Books" %>
+<% @page_title = "Книги" %>
 
 <ol class="booklist">
   <%= render :partial => "book", :collection => @books %>
@@ -6,4 +6,4 @@
 
 <br />
 
-<%= link_to 'New book', new_book_path %>
+<%= link_to 'Новая книга', new_book_path %>
