--- a/app/views/search/create.html.erb
+++ b/app/views/search/create.html.erb
@@ -1,4 +1,4 @@
-<% @page_title = "Search results" %>
+<% @page_title = "Результаты поиска" %>
 
 <% if not @books.empty? %>
   <ol class="booklist">
@@ -6,6 +6,6 @@
   </ol>
 <% else%>
   <p>
-    Sorry, nothing was found.
+    Извините, по вашему запросу нечего не найдено.
   </p>
 <% end%>
