--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <li>
 <div class="post">
   <h2 class="title"><%= h comment.title %></h2>
-  <p class="meta">Posted by <%= link_to_user( comment.user ) %> on <%= comment.created_at.strftime "%B %d, %Y" %></p>
+  <p class="meta"><%= link_to_user( comment.user ) %> написал <%= comment.created_at.strftime "%B %d, %Y" %></p>
   <div class="entry">
     <p><%= h comment.comment %></p>
   </div>
