--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -2,8 +2,8 @@
 
 <% form_tag search_path do %>
     <%= text_field_tag :query %>
-    <%= submit_tag "Search" %>
+    <%= submit_tag "Поиск" %>
   </p>
 <% end %>
 
-<%= link_to 'Back', books_path %>
+<%= link_to 'Назад', books_path %>
