All translated into russian. And other fixes.

--- a/app/views/books/_fields.html.erb
+++ b/app/views/books/_fields.html.erb
@@ -5,7 +5,7 @@
     <%= f.text_field :title %>
   </p>
   <p>
-    <%= f.label :authors %><br />
+    <%= f.label :str_authors, "Авторы (через запятую)" %><br />
     <%= f.text_field :str_authors %>
   </p>
   <p>
