--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,19 +1,9 @@
 <% 
   @page_title = 'Добавление книги'
-  @include_js = 'books'
+  #@include_js = 'books'
 %>
 
-<% has_similar = @similar_books and not @similar_books.empty? %>
-<% if has_similar %>
-  <ol class="booklist">
-    <%= render :partial => "books/book", :collection => @similar_books %>
-  </ol>
-  <h3>Если вы все равно хотите добавить новую книгу подтвердите форму еще раз.</h3>
-<% end %>
-
 <% form_for(@book) do |f| %>
-  <%= hidden_field_tag "create_anyway", if has_similar then "true" else "false" end %>
-  
   <%= render :partial => 'fields', :locals => { :f => f }  %>
 
   <p>
