--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
 		<meta name="robots" content="all" />	
 		<meta name="resource-type" content="document" />
 		<meta name="MSSmartTagsPreventParsing" content="true" />
-		<%= stylesheet_link_tag 'base' %>
+        <%= stylesheet_link_tag 'base' %>
 		<%= stylesheet_link_tag 'default' %>
+        <%= javascript_include_tag :defaults %>
 		<%= javascript_include_tag 'jquery' %>
 		<%= javascript_include_tag 'ui.core.js' %>
 		<%= javascript_include_tag 'ui.autocomplete.js' %>
